--- a/e-Backpack/WebContent/homepage/e-BP.css
+++ b/e-Backpack/WebContent/homepage/e-BP.css
@@ -1,7 +1,7 @@
 body {
     background-color: #7C898B;
 }
-
+/*extra css pg*/
 /* The side navigation menu */
 .sidenav {
     height: 100%; /* 100% Full-height */
