--- a/e-Backpack/WebContent/e-BP.css
+++ b/e-Backpack/WebContent/e-BP.css
@@ -1,13 +1,7 @@
 body {
     background-color: #7C898B;
 }
-
-img {
-    max-width: 100%;
-    max-height: 100%;
-}
-
-
+/*extra css pg*/
 /* The side navigation menu */
 .sidenav {
     height: 100%; /* 100% Full-height */
