--- a/e-Backpack/WebContent/planner/modalStyle.css
+++ b/e-Backpack/WebContent/planner/modalStyle.css
@@ -2,49 +2,60 @@
 body{
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 17px;
-	line-height:1.6;
+	line-height: 1.6;
 }
 
 .button{
-	background: coral;
-	padding: 1em 2em;
-	color: #ffa;
+	background: #555753;
+	padding: 1em .5em;
+	color: #fff;
 	border: 0;
 }
 .button:hover{
-	background: #300;
+	background: #babdb6;
 }
 
 .modal{
-	display:none;
-	position:fixed;
-	z-index:1;
+	display: none;
+	position: fixed;
+	z-index: 1;
 	left: 0;
-	bottom: 0;
-	height: 45%;
-	width: 20%;
+	top: 0;
+	height: 100%;
+	width: 100%;
 	overflow: auto;
 	background-color: rgba(0,0,0,0.5);
 }
 
-.modal-content{
-		background-color: #f4f4f4;
-		margin: 20% auto;
-		padding: 20px;
-		width: 75%%;
+.modalHeader{
 	
 }
 
-.clostBtn{
-	color: #ccc;
-	float: right;
-	font-size: 40px
+.modal-content{
+	background-color: #f4f4f4;
+	margin: 20% auto;
+	padding: 20px;
+	width: 50%;
+	height: 60%%;
+	
 }
 
-.closeBtn:hover, .closeBtn:focus{
-	color: #000;
-	text-decorations: none;
-	cursor: pointer
-		
+.closeBtn{
+	color: #ccc;
+	float: right;
+	font-size: 30px;
+}
 
+.addEventBtn{
+	background: #555753;
+	padding: 1em .5em;
+	color: #fff;
+	border: 0;
+	float: right;
+}
+
+.closeBtn:hover,.closeBtn:focus{
+	color: #000;
+	text-decoration: none;
+	cursor: pointer;
 }
