--- a/e-Backpack/WebContent/planner/modalStyle.css
+++ b/e-Backpack/WebContent/planner/modalStyle.css
@@ -27,16 +27,13 @@ body{
 	background-color: rgba(0,0,0,0.5);
 }
 
-.modalHeader{
-	
-}
 
 .modal-content{
 	background-color: #f4f4f4;
 	margin: 20% auto;
-	padding: 20px;
+	padding: ;
 	width: 50%;
-	height: 60%%;
+	height: 85%;
 	
 }
 
@@ -58,4 +55,46 @@ body{
 	color: #000;
 	text-decoration: none;
 	cursor: pointer;
+}
+
+.event-title{
+	border: 2px solid #ccc;
+	border-radius: 4px;
+    background-color: #f8f8f8;
+    resize: none;
+}
+
+.event-desc{
+	width: 50%;
+    height: 45px;
+    padding: 16px 20px;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    background-color: #f8f8f8;
+    resize: none;
+}
+
+.event-date{
+	border: 2px solid #ccc;
+	border-radius: 4px;
+    background-color: #f8f8f8;
+    resize: none;
+}
+
+.event-time{
+	border: 2px solid #ccc;
+	border-radius: 4px;
+    background-color: #f8f8f8;
+    resize: none;
+}
+
+.modal-header{
+	background: #000;
+	padding: 15px;
+	color: #555753
+}
+
+.modalHead{
+	color: #555753
 }
