--- a/e-Backpack/.settings/org.eclipse.wst.common.component
+++ b/e-Backpack/.settings/org.eclipse.wst.common.component
@@ -2,6 +2,7 @@
     <wb-module deploy-name="e-Backpack">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/test"/>
         <property name="context-root" value="e-Backpack"/>
         <property name="java-output-path" value="/e-Backpack/build/classes"/>
     </wb-module>
