--- a/e-Backpack/WebContent/modalStyle.css
+++ b/e-Backpack/WebContent/modalStyle.css
@@ -5,13 +5,14 @@ body{
 	line-height: 1.6;
 }
 
-.button{
-	background: #555753;
-	padding: 1em .5em;
-	color: #fff;
+.Modalbutton{
+	background: #ffffff;
+	padding: 10px 20px;
+	color: #000;
 	border: 0;
+	border-radius: 12px;
 }
-.button:hover{
+.Modalbutton:hover{
 	background: #babdb6;
 }
 
@@ -27,16 +28,13 @@ body{
 	background-color: rgba(0,0,0,0.5);
 }
 
-.modalHeader{
-	
-}
 
 .modal-content{
-	background-color: #f4f4f4;
+	background-color: #555753;
 	margin: 20% auto;
-	padding: 20px;
-	width: 50%;
-	height: 60%%;
+	padding: 10px 10px ;
+	width: 40%;
+	height: 90%;
 	
 }
 
@@ -46,16 +44,78 @@ body{
 	font-size: 30px;
 }
 
-.addEventBtn{
+.Eventbutton{
 	background: #555753;
 	padding: 1em .5em;
 	color: #fff;
 	border: 0;
-	float: right;
+	
+}
+
+.Eventbutton:hover{
+	background: #babdb6;
 }
 
 .closeBtn:hover,.closeBtn:focus{
 	color: #000;
 	text-decoration: none;
 	cursor: pointer;
+}
+
+.label{
+	display: inline-block;
+	float: left;
+	clear:left;
+	width: 250px;
+	text-align: right
+}
+
+
+.modal-header{
+	background: #000;
+	padding: 15px;
+	color: #555753
+}
+
+.modalHead{
+	color: #555753
+}
+
+.event-desc{
+	width: 40%;
+	height: 70px;
+	padding: 6px 10px;
+	box-sizing: border-box;
+	background-color: #d3d7cf;
+	color: #000
+}
+
+.event-title{
+	padding: 6px 10px;
+	background-color: #d3d7cf;
+	color: #000;
+}
+
+.event-date{
+	padding: 6px 10px;
+	background-color: #d3d7cf;
+	color: #000;
+}
+
+.event-start{
+	padding: 6px 10px;
+	background-color: #d3d7cf;
+	color: #000;
+}
+
+.event-end{
+	padding: 6px 10px;
+	background-color: #d3d7cf;
+	color: #000;
+}
+
+.event-location{
+	padding: 6px 10px;
+	background-color: #d3d7cf;
+	color: #000;
 }
